--- a/build-tools/build-infra/src/main/groovy/lucene.java-projects.conventions.gradle
+++ b/build-tools/build-infra/src/main/groovy/lucene.java-projects.conventions.gradle
@@ -21,6 +21,7 @@ import org.apache.lucene.gradle.plugins.java.JavacConfigurationPlugin
 import org.apache.lucene.gradle.plugins.java.JarManifestConfigurationPlugin
 import org.apache.lucene.gradle.plugins.java.TestsAndRandomizationPlugin
 import org.apache.lucene.gradle.plugins.java.TestsBeastingPlugin
+import org.apache.lucene.gradle.plugins.java.AlternativeJdkSupportPlugin
 
 allprojects { project ->
   if (['src/java', 'src/test'].any {path ->
@@ -28,6 +29,7 @@ allprojects { project ->
       }) {
     plugins.apply("java-library")
 
+    plugins.apply(AlternativeJdkSupportPlugin)
     plugins.apply(JavaFolderLayoutPlugin)
     plugins.apply(JavacConfigurationPlugin)
     plugins.apply(JarManifestConfigurationPlugin)
