--- a/build-tools/build-infra/src/main/groovy/lucene.documentation.gradle
+++ b/build-tools/build-infra/src/main/groovy/lucene.documentation.gradle
@@ -15,16 +15,19 @@
  * limitations under the License.
  */
 
+import org.apache.lucene.gradle.plugins.globals.LuceneBuildGlobalsExtension
+
 if (project != project.rootProject) {
   throw new GradleException("Applicable to rootProject only: " + project.path)
 }
 
 configure(rootProject) {
-  def urlVersion = rootProject.ext.baseVersion.replace('.', '_')
+  LuceneBuildGlobalsExtension buildGlobals = rootProject.extensions.getByType(LuceneBuildGlobalsExtension)
+  def urlVersion = buildGlobals.baseVersion.replace('.', '_')
 
   Provider<String> luceneJavadocUrl = buildOptions.addOption("lucene.javadoc.url",
       "External Javadoc URL for documentation generator.", provider {
-        if (project.version != project.baseVersion) {
+        if (buildGlobals.snapshotBuild) {
           // non-release build does not cross-link between modules.
           return null
         } else {
