Moved lucene.java.tests-and-randomization.gradle and more scripts to java (#14897)

--- a/build-tools/build-infra/src/main/groovy/lucene.documentation.render-javadoc.gradle
+++ b/build-tools/build-infra/src/main/groovy/lucene.documentation.render-javadoc.gradle
@@ -1,4 +1,5 @@
 import org.gradle.internal.jvm.Jvm
+import org.apache.lucene.gradle.plugins.java.RenderJavadocTaskBase
 
 /*
  * Licensed to the Apache Software Foundation (ASF) under one or more
@@ -269,7 +270,7 @@ class OfflineLink implements Serializable {
 }
 
 @CacheableTask
-class RenderJavadocTask extends DefaultTask {
+abstract class RenderJavadocTask extends RenderJavadocTaskBase {
   @InputFiles
   @PathSensitive(PathSensitivity.RELATIVE)
   @IgnoreEmptyDirectories
@@ -328,11 +329,6 @@ class RenderJavadocTask extends DefaultTask {
   @Input
   @Optional
   ListProperty<String> extraOpts = project.objects.listProperty(String)
-
-  @Optional
-  @Input
-  final Property<String> executable = project.objects.property(String).convention(
-  project.provider { Jvm.current().javadocExecutable.toString() })
 
   @InputDirectory
   @PathSensitive(PathSensitivity.RELATIVE)
