--- a/build-tools/build-infra/src/main/groovy/lucene.java-projects.conventions.gradle
+++ b/build-tools/build-infra/src/main/groovy/lucene.java-projects.conventions.gradle
@@ -19,6 +19,9 @@ import org.apache.lucene.gradle.plugins.spotless.GoogleJavaFormatPlugin
 import org.apache.lucene.gradle.plugins.java.JavaFolderLayoutPlugin
 import org.apache.lucene.gradle.plugins.java.JavacConfigurationPlugin
 import org.apache.lucene.gradle.plugins.java.JarManifestConfigurationPlugin
+import org.apache.lucene.gradle.plugins.java.TestsAndRandomizationPlugin
+import org.apache.lucene.gradle.plugins.java.TestsBeastingPlugin
+import org.apache.lucene.gradle.plugins.java.AlternativeJdkSupportPlugin
 
 allprojects { project ->
   if (['src/java', 'src/test'].any {path ->
@@ -26,11 +29,12 @@ allprojects { project ->
       }) {
     plugins.apply("java-library")
 
+    plugins.apply(AlternativeJdkSupportPlugin)
     plugins.apply(JavaFolderLayoutPlugin)
     plugins.apply(JavacConfigurationPlugin)
     plugins.apply(JarManifestConfigurationPlugin)
-
-    plugins.apply("lucene.java.tests-and-randomization")
+    plugins.apply(TestsAndRandomizationPlugin)
+    plugins.apply(TestsBeastingPlugin)
     plugins.apply("lucene.java.per-project-test-summary")
 
     plugins.apply("lucene.validation.forbidden-apis")
