--- a/build-tools/build-infra/src/main/groovy/lucene.documentation.render-javadoc.gradle
+++ b/build-tools/build-infra/src/main/groovy/lucene.documentation.render-javadoc.gradle
@@ -364,13 +364,11 @@ abstract class RenderJavadocTask extends RenderJavadocTaskBase {
         .collect {  dir -> project.file("${dir}/overview.html") }
         .findAll { overviewFile -> overviewFile.exists() }
 
-    if (!overviewFiles.isEmpty()) {
-      assert overviewFiles.size() == 1 : "More than one overview file?: " + overviewFiles
-      opts << [
-        '-overview',
-        project.file("${overviewFiles.getFirst()}/overview.html")
-      ]
-    }
+    assert overviewFiles.size() == 1 : "Must be exactly one overview.html file: " + overviewFiles
+    opts << [
+      '-overview',
+      project.file(overviewFiles.getFirst())
+    ]
 
     opts << ['-d', outputDir]
     opts << '-protected'
