--- a/build-tools/build-infra/src/main/groovy/lucene.documentation.gradle
+++ b/build-tools/build-infra/src/main/groovy/lucene.documentation.gradle
@@ -70,6 +70,15 @@ configure(project(':lucene:documentation')) {
         'markdownToHtml', 'createDocumentationIndex'
   })
 
+  // in CI, fully build documentation. this is very costly, way too
+  // much for a developer workflow, but it validates build machinery,
+  // and link references from overview.html, that javac won't catch
+  if (System.getenv("CI") != null) {
+    tasks.named("check").configure {
+      dependsOn 'documentation'
+    }
+  }
+
   tasks.register("copyDocumentationAssets", Copy, {
     includeEmptyDirs = false
     from project.ext.assets
