--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,7 +9,7 @@ commons-codec = "1.18.0"
 # benchmark/ bzip2 compression
 commons-compress = "1.27.1"
 # See ecj-lint.gradle (used for more linting).
-ecj = "4.36M1"
+ecj = "3.42.0"
 # java linting
 errorprone = "2.38.0"
 # markdown documentation generation
