--- a/gradle/validation/ast-grep/tests/java-patterns.yml
+++ b/gradle/validation/ast-grep/tests/java-patterns.yml
@@ -72,3 +72,33 @@ invalid:
 valid:
   - |
     var foo = "TOOD: whatever";
+---
+id: missing-spi-block-tag
+invalid:
+  - |
+    public class X extends TokenizerFactory {}
+  - |
+    public class X extends TokenFilterFactory implements A,B,C {}
+  - |
+    public final class X extends CharFilterFactory {}
+  - |
+    @Foo
+    public class X extends CharFilterFactory {}
+  - |
+    /** boo */
+    public class X extends TokenizerFactory {}
+  - |
+    /* not javadoc
+    * @lucene.spi {@value #NAME}
+    */
+    public class X extends TokenizerFactory {}
+valid:
+  - |
+    /** this is javadoc
+    * @lucene.spi {@value #NAME}
+    */
+    public class X extends TokenizerFactory {}
+  - |
+    public abstract class X extends TokenizerFactory {}
+  - |
+    private class X extends TokenizerFactory {}
