Minor tweaks to how git executable is looked up. Tidy.

--- a/build-tools/build-infra/src/main/groovy/lucene.validation.source-patterns.gradle
+++ b/build-tools/build-infra/src/main/groovy/lucene.validation.source-patterns.gradle
@@ -31,10 +31,7 @@ if (project != project.rootProject) {
   throw new GradleException("Applicable to rootProject only: " + project.path)
 }
 
-List<String> extensions = [
-  'java',
-  'xml',
-]
+List<String> extensions = ['java', 'xml',]
 
 // Create source validation task local to each project
 allprojects {
