Add poorly formatted code to test format bot
- Added intentionally poorly formatted Java methods to Term.java
- Added poorly formatted Gradle tasks to demo/build.gradle
- This code violates Google Java Format and Spotless rules
- Testing workflow bot for automatic formatting fixes

--- a/lucene/demo/build.gradle
+++ b/lucene/demo/build.gradle
@@ -29,3 +29,23 @@ dependencies {
 
   moduleTestImplementation project(':lucene:test-framework')
 }
+
+// Poorly formatted task for testing format bot
+task   formatTest{
+   description='Test task with bad formatting'
+   doLast{
+       println("This  has   poor   spacing")
+       if(project.hasProperty('testProp')){
+println  "Property exists"
+        }else {
+              println(  "No property found"  );
+       }
+   }
+}
+
+// More poor formatting
+configurations{
+   customConfig{
+     description    =   "Custom configuration"
+   }
+}
