--- a/.github/workflows/auto-format-bot.yml
+++ b/.github/workflows/auto-format-bot.yml
@@ -90,9 +90,13 @@ jobs:
         run: |
           echo "Applying formatting fixes..."
           ./gradlew tidy "-Ptask.times=true" --max-workers 2
-          echo "Applying EditorConfig fixes (removing trailing whitespace)..."
+          echo "Applying EditorConfig fixes..."
           # Remove trailing whitespace from all tracked files (handle filenames with spaces)
           git ls-files -z | xargs -0 sed -i 's/[[:space:]]*$//'
+          # Fix line endings for Windows files (convert LF to CRLF for .bat files)
+          git ls-files -z '*.bat' | xargs -0 -r sed -i 's/$/\r/'
+          # Remove any double CRLF that might have been created
+          git ls-files -z '*.bat' | xargs -0 -r sed -i 's/\r\r$/\r/'
 
       - name: Check if any files were changed
         id: git_changes
