--- a/.github/workflows/auto-format-bot.yml
+++ b/.github/workflows/auto-format-bot.yml
@@ -93,10 +93,10 @@ jobs:
           echo "Applying EditorConfig fixes..."
           # Remove trailing whitespace from all tracked files (handle filenames with spaces)
           git ls-files -z | xargs -0 sed -i 's/[[:space:]]*$//'
-          # Fix line endings for Windows files (convert LF to CRLF for .bat files)
-          git ls-files -z '*.bat' | xargs -0 -r sed -i 's/$/\r/'
+          # Fix line endings for Windows files (convert LF to CRLF for .bat and .cmd files)
+          git ls-files -z '*.bat' '*.cmd' | xargs -0 -r sed -i 's/$/\r/'
           # Remove any double CRLF that might have been created
-          git ls-files -z '*.bat' | xargs -0 -r sed -i 's/\r\r$/\r/'
+          git ls-files -z '*.bat' '*.cmd' | xargs -0 -r sed -i 's/\r\r$/\r/'
 
       - name: Check if any files were changed
         id: git_changes
