--- a/.github/workflows/auto-format-bot.yml
+++ b/.github/workflows/auto-format-bot.yml
@@ -91,12 +91,10 @@ jobs:
           echo "Applying formatting fixes..."
           ./gradlew tidy "-Ptask.times=true" --max-workers 2
           echo "Applying EditorConfig fixes..."
-          # Remove trailing whitespace from all tracked files (handle filenames with spaces)
-          git ls-files -z | xargs -0 sed -i 's/[[:space:]]*$//'
-          # Fix line endings for Windows files (convert LF to CRLF for .bat and .cmd files)
-          git ls-files -z '*.bat' '*.cmd' | xargs -0 -r sed -i 's/$/\r/'
-          # Remove any double CRLF that might have been created
-          git ls-files -z '*.bat' '*.cmd' | xargs -0 -r sed -i 's/\r\r$/\r/'
+          # Fix Windows batch/cmd files first (convert to CRLF and remove trailing whitespace except \r)
+          git ls-files -z '*.bat' '*.cmd' | xargs -0 -r sed -i -e 's/[[:blank:]]*$//' -e 's/$/\r/' -e 's/\r\r$/\r/'
+          # Remove trailing whitespace from all other files (excluding .bat and .cmd)
+          git ls-files -z | grep -zv -E '\.(bat|cmd)$' | xargs -0 sed -i 's/[[:space:]]*$//'
 
       - name: Check if any files were changed
         id: git_changes
