--- a/.github/workflows/auto-format-bot.yml
+++ b/.github/workflows/auto-format-bot.yml
@@ -91,12 +91,15 @@ jobs:
           echo "Applying formatting fixes..."
           ./gradlew tidy "-Ptask.times=true" --max-workers 2
           echo "Applying EditorConfig fixes..."
-          # Use eclint to fix EditorConfig violations
-          pwd
-          ls -la
-          git ls-files | head -5
-          eclint fix --help || true
-          eclint fix $(git ls-files | head -5)
+          # Fix trailing whitespace in all files (respecting EditorConfig)
+          git ls-files -z | xargs -0 sed -i 's/[[:space:]]*$//'
+          # Fix line endings for Windows files (convert LF to CRLF for .bat/.cmd files)
+          find . -name "*.bat" -o -name "*.cmd" | while read -r file; do
+            # Convert LF to CRLF if not already CRLF
+            if ! file "$file" | grep -q "CRLF"; then
+              sed -i 's/$/\r/' "$file"
+            fi
+          done
 
       - name: Check if any files were changed
         id: git_changes
