--- a/.github/workflows/auto-format-bot.yml
+++ b/.github/workflows/auto-format-bot.yml
@@ -128,6 +128,8 @@ jobs:
             echo "✅ Formatting validation passed after fixes"
           else
             echo "❌ Formatting validation still failing after fixes"
+            echo "Let's see what eclint is specifically complaining about:"
+            eclint check . || true
           fi
           exit 0
 
