using editor config checker instead

--- a/.github/workflows/auto-format-bot.yml
+++ b/.github/workflows/auto-format-bot.yml
@@ -67,8 +67,10 @@ jobs:
 
       - uses: ./.github/actions/prepare-for-build
 
-      - name: Install eclint
-        uses: ./.github/actions/eclint
+      - name: Install editorconfig-checker
+        run: |
+          npm install -g editorconfig-checker
+          echo "Installed editorconfig-checker version: $(editorconfig-checker --version)"
 
       - name: Install ast-grep
         run: |
@@ -91,42 +93,43 @@ jobs:
           echo "Applying formatting fixes..."
           ./gradlew tidy "-Ptask.times=true" --max-workers 2
 
-                              echo "Applying EditorConfig fixes..."
+                                                  echo "Applying EditorConfig fixes..."
 
-          echo "Applying comprehensive EditorConfig fixes (manual approach)..."
+          # Check current EditorConfig compliance
+          echo "Checking EditorConfig compliance before fixes..."
+          editorconfig_issues_before=$(editorconfig-checker . 2>&1 || echo "EditorConfig issues found")
 
-          # Fix trailing whitespace in all files
-          echo "Removing trailing whitespace..."
+          echo "Applying comprehensive EditorConfig fixes..."
+
+          # 1. Fix trailing whitespace in all files
+          echo "→ Removing trailing whitespace..."
           git ls-files -z | xargs -0 -I {} sh -c 'sed -i "s/[[:space:]]*$//" "$1"' _ {}
 
-          # Fix line endings for Windows files (convert LF to CRLF for .bat/.cmd files)
-          echo "Fixing line endings for Windows files..."
+          # 2. Fix line endings for Windows files (convert LF to CRLF for .bat/.cmd files)
+          echo "→ Fixing line endings for Windows files..."
           git ls-files -z '*.bat' '*.cmd' | while IFS= read -r -d '' file; do
-            # Check if file doesn't already have CRLF line endings
             if ! file "$file" | grep -q "CRLF"; then
-              echo "Converting LF to CRLF for: $file"
+              echo "  Converting LF to CRLF for: $file"
               sed -i 's/$/\r/' "$file"
             fi
           done
 
-          # Fix indentation issues (convert tabs to spaces)
-          echo "Converting tabs to spaces for text files..."
+          # 3. Fix indentation issues (convert tabs to spaces where needed)
+          echo "→ Converting tabs to spaces for text files..."
           git ls-files -z '*.java' '*.gradle' '*.groovy' '*.yml' '*.yaml' '*.md' '*.txt' '*.properties' | xargs -0 -I {} sh -c 'sed -i "s/\t/  /g" "$1"' _ {}
 
-          # Ensure files end with newline
-          echo "Ensuring files end with newline..."
+          # 4. Ensure files end with newline
+          echo "→ Ensuring files end with newline..."
           git ls-files -z | while IFS= read -r -d '' file; do
-            # Skip binary files and specific file types that shouldn't be modified
+            # Skip binary files and specific file types
             if file "$file" | grep -q "text" && ! echo "$file" | grep -qE '\.(jar|zip|png|jpg|gif|ico|class|sha1)$'; then
-              # Add newline if file doesn't end with one
               if [ -s "$file" ] && [ "$(tail -c1 "$file" | wc -l)" -eq 0 ]; then
                 echo "" >> "$file"
               fi
             fi
           done
 
-          # Fix charset issues - ensure UTF-8 encoding for text files
-          echo "EditorConfig fixes completed"
+          echo "✅ EditorConfig fixes completed"
 
       - name: Check if any files were changed
         id: git_changes
@@ -147,16 +150,32 @@ jobs:
         if: steps.check_before.outputs.initial_check_passed == 'false' && steps.git_changes.outputs.changes_made == 'true'
         run: |
           echo "Verifying formatting fixes..."
+
+          # Check EditorConfig compliance after fixes
+          echo "Checking EditorConfig compliance after fixes..."
           set +e
+          editorconfig_check_result=$(editorconfig-checker . 2>&1)
+          editorconfig_exit_code=$?
+
+          # Check Gradle formatting compliance (code formatting, not EditorConfig)
+          echo "Checking code formatting compliance..."
           ./gradlew check -x test "-Ptask.times=true" --max-workers 2
-          exit_code=$?
-          echo "final_check_passed=$([[ $exit_code -eq 0 ]] && echo 'true' || echo 'false')" >> $GITHUB_OUTPUT
-          if [[ $exit_code -eq 0 ]]; then
-            echo "✅ Formatting validation passed after fixes"
+          gradle_exit_code=$?
+
+          # Overall success requires both to pass
+          if [[ $editorconfig_exit_code -eq 0 && $gradle_exit_code -eq 0 ]]; then
+            echo "✅ All formatting validation passed after fixes"
+            echo "final_check_passed=true" >> $GITHUB_OUTPUT
           else
-            echo "❌ Formatting validation still failing after fixes"
-            echo "Let's see what eclint is specifically complaining about:"
-            eclint check . || true
+            echo "❌ Some formatting validation still failing after fixes"
+            if [[ $editorconfig_exit_code -ne 0 ]]; then
+              echo "EditorConfig issues found:"
+              echo "$editorconfig_check_result"
+            fi
+            if [[ $gradle_exit_code -ne 0 ]]; then
+              echo "Gradle formatting checks failed"
+            fi
+            echo "final_check_passed=false" >> $GITHUB_OUTPUT
           fi
           exit 0
 
@@ -217,7 +236,11 @@ jobs:
             - ✅ Code formatting via \`./gradlew tidy\`
             - ✅ Java code formatted with google-java-format
             - ✅ Gradle/Groovy scripts formatted with spotless
-            - ✅ EditorConfig fixes (trailing whitespace removal)
+            - ✅ EditorConfig compliance via \`editorconfig-checker\`
+            - ✅ Trailing whitespace removal
+            - ✅ Line ending fixes (CRLF for Windows files)
+            - ✅ Tab-to-space conversion
+            - ✅ Final newline insertion
             - ✅ All formatting validation checks now pass
 
             ### 📝 Details
