only checking relevant files

--- a/.github/workflows/auto-format-bot.yml
+++ b/.github/workflows/auto-format-bot.yml
@@ -93,43 +93,66 @@ jobs:
           echo "Applying formatting fixes..."
           ./gradlew tidy "-Ptask.times=true" --max-workers 2
 
-                                                  echo "Applying EditorConfig fixes..."
+          echo "Applying EditorConfig fixes..."
 
-          # Check current EditorConfig compliance
-          echo "Checking EditorConfig compliance before fixes..."
-          editorconfig_issues_before=$(editorconfig-checker . 2>&1 || echo "EditorConfig issues found")
+          # Get list of changed files (exclude deleted files and binary files)
+          echo "Getting list of changed files..."
+          changed_files=$(git diff --name-only --diff-filter=AM ${{ fromJson(steps.pr_details.outputs.result).base_ref }}...HEAD | grep -E '\.(java|gradle|groovy|yml|yaml|md|txt|properties|sh|bat|cmd)$' || true)
 
-          echo "Applying comprehensive EditorConfig fixes..."
+          if [ -z "$changed_files" ]; then
+            echo "No relevant files changed for EditorConfig processing"
+            exit 0
+          fi
 
-          # 1. Fix trailing whitespace in all files
-          echo "→ Removing trailing whitespace..."
-          git ls-files -z | xargs -0 -I {} sh -c 'sed -i "s/[[:space:]]*$//" "$1"' _ {}
+          echo "Files to process:"
+          echo "$changed_files"
+
+          # Check current EditorConfig compliance for changed files only
+          echo "Checking EditorConfig compliance for changed files..."
+          if [ -n "$changed_files" ]; then
+            echo "$changed_files" | xargs editorconfig-checker 2>&1 || echo "EditorConfig issues found in changed files"
+          fi
+
+          echo "Applying comprehensive EditorConfig fixes to changed files..."
+
+          # 1. Fix trailing whitespace in changed files
+          echo "→ Removing trailing whitespace from changed files..."
+          if [ -n "$changed_files" ]; then
+            echo "$changed_files" | xargs -I {} sh -c 'sed -i "s/[[:space:]]*$//" "$1"' _ {}
+          fi
 
           # 2. Fix line endings for Windows files (convert LF to CRLF for .bat/.cmd files)
           echo "→ Fixing line endings for Windows files..."
-          git ls-files -z '*.bat' '*.cmd' | while IFS= read -r -d '' file; do
-            if ! file "$file" | grep -q "CRLF"; then
-              echo "  Converting LF to CRLF for: $file"
-              sed -i 's/$/\r/' "$file"
-            fi
-          done
+          windows_files=$(echo "$changed_files" | grep -E '\.(bat|cmd)$' || true)
+          if [ -n "$windows_files" ]; then
+            echo "$windows_files" | while read -r file; do
+              if [ -f "$file" ] && ! file "$file" | grep -q "CRLF"; then
+                echo "  Converting LF to CRLF for: $file"
+                sed -i 's/$/\r/' "$file"
+              fi
+            done
+          fi
 
           # 3. Fix indentation issues (convert tabs to spaces where needed)
           echo "→ Converting tabs to spaces for text files..."
-          git ls-files -z '*.java' '*.gradle' '*.groovy' '*.yml' '*.yaml' '*.md' '*.txt' '*.properties' | xargs -0 -I {} sh -c 'sed -i "s/\t/  /g" "$1"' _ {}
+          if [ -n "$changed_files" ]; then
+            echo "$changed_files" | xargs -I {} sh -c 'sed -i "s/\t/  /g" "$1"' _ {}
+          fi
 
           # 4. Ensure files end with newline
           echo "→ Ensuring files end with newline..."
-          git ls-files -z | while IFS= read -r -d '' file; do
-            # Skip binary files and specific file types
-            if file "$file" | grep -q "text" && ! echo "$file" | grep -qE '\.(jar|zip|png|jpg|gif|ico|class|sha1)$'; then
-              if [ -s "$file" ] && [ "$(tail -c1 "$file" | wc -l)" -eq 0 ]; then
-                echo "" >> "$file"
+          if [ -n "$changed_files" ]; then
+            echo "$changed_files" | while read -r file; do
+              if [ -f "$file" ] && file "$file" | grep -q "text"; then
+                if [ -s "$file" ] && [ "$(tail -c1 "$file" | wc -l)" -eq 0 ]; then
+                  echo "  Adding final newline to: $file"
+                  echo "" >> "$file"
+                fi
               fi
-            fi
-          done
+            done
+          fi
 
-          echo "✅ EditorConfig fixes completed"
+          echo "✅ EditorConfig fixes completed for changed files"
 
       - name: Check if any files were changed
         id: git_changes
@@ -151,11 +174,19 @@ jobs:
         run: |
           echo "Verifying formatting fixes..."
 
-          # Check EditorConfig compliance after fixes
-          echo "Checking EditorConfig compliance after fixes..."
+          # Get list of changed files again (in case the list is different)
+          changed_files=$(git diff --name-only --diff-filter=AM ${{ fromJson(steps.pr_details.outputs.result).base_ref }}...HEAD | grep -E '\.(java|gradle|groovy|yml|yaml|md|txt|properties|sh|bat|cmd)$' || true)
+
+          # Check EditorConfig compliance after fixes for changed files only
+          echo "Checking EditorConfig compliance after fixes for changed files..."
           set +e
-          editorconfig_check_result=$(editorconfig-checker . 2>&1)
-          editorconfig_exit_code=$?
+          editorconfig_exit_code=0
+          if [ -n "$changed_files" ]; then
+            editorconfig_check_result=$(echo "$changed_files" | xargs editorconfig-checker 2>&1)
+            editorconfig_exit_code=$?
+          else
+            editorconfig_check_result="No changed files to check"
+          fi
 
           # Check Gradle formatting compliance (code formatting, not EditorConfig)
           echo "Checking code formatting compliance..."
@@ -169,7 +200,7 @@ jobs:
           else
             echo "❌ Some formatting validation still failing after fixes"
             if [[ $editorconfig_exit_code -ne 0 ]]; then
-              echo "EditorConfig issues found:"
+              echo "EditorConfig issues found in changed files:"
               echo "$editorconfig_check_result"
             fi
             if [[ $gradle_exit_code -ne 0 ]]; then
